syntax = "proto3";

option go_package = "proto/auth";

service AuthService {
  rpc Login (LoginRequest) returns (LoginResponse);
  
  rpc DecodeToken (DecodeTokenRequest) returns (DecodeTokenResponse);
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  bool success = 1;
  string message = 2;
  string token = 3;
}

message DecodeTokenRequest {
  string token = 1;
}

message DecodeTokenResponse {
  bool is_valid = 1;
  string message = 2;
  string username = 3;
  string role = 4;
  string exp = 5;
}
